[gd_scene load_steps=2 format=3 uid="uid://pjfl1me74ok6"]

[ext_resource type="Script" uid="uid://dfbl5q0u7ktk1" path="res://Scipts/textbox.gd" id="1_psw4q"]

[node name="textbox" type="CanvasLayer"]
script = ExtResource("1_psw4q")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 350)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="texttimer" type="Timer" parent="Control"]

[node name="answercontainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -116.0
grow_horizontal = 2
grow_vertical = 0

[node name="answer1" type="Button" parent="Control/answercontainer"]
layout_mode = 2

[node name="answer2" type="Button" parent="Control/answercontainer"]
layout_mode = 2

[node name="answer3" type="Button" parent="Control/answercontainer"]
layout_mode = 2

[node name="answer4" type="Button" parent="Control/answercontainer"]
layout_mode = 2

[node name="buttontimer" type="Timer" parent="."]

[connection signal="timeout" from="Control/texttimer" to="." method="_on_texttimer_timeout"]
[connection signal="pressed" from="Control/answercontainer/answer1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="Control/answercontainer/answer2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="Control/answercontainer/answer3" to="." method="_on_answer_3_pressed"]
[connection signal="pressed" from="Control/answercontainer/answer4" to="." method="_on_answer_4_pressed"]
[connection signal="timeout" from="buttontimer" to="." method="_on_buttontimer_timeout"]
